<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo04"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Promedio" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pcurso"
            android:textColor="@color/coloresetiquetas02"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tcurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorcuadros02" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tnota1"
            android:textColor="@color/coloresetiquetas02"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tnota1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/colorcuadros02" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tnota2"
            android:textColor="@color/colorcuadros02"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tnota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/colorcuadros02" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tnota3"
            android:textColor="@color/coloresetiquetas02"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tnota3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/colorcuadros02" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tpromedio"
            android:textColor="@color/coloresetiquetas02"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tpromedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/colorcuadros02" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tobservacion"
            android:textColor="@color/coloresetiquetas02"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tobservacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorcuadros02" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="43dp" >

        <Button
            android:id="@+id/btnnuevo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bnuevo"
            android:textColor="@color/colorcuadros02"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btncalcular3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bcalcular"
            android:textColor="@color/colorcuadros02"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnsalir3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bsalir"
            android:textColor="@color/colorcuadros02"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>