<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo03"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Trapecio" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmenor"
            android:textColor="@color/coloresetiquetas01"
            android:textSize="@dimen/tamanoetiquetas01"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tbmenor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorcuadros01" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmayor"
            android:textColor="@color/coloresetiquetas01"
            android:textSize="@dimen/tamanoetiquetas01"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tbmayor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorcuadros01" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baltura"
            android:textColor="@color/coloresetiquetas01"
            android:textSize="@dimen/tamanoetiquetas01"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/taltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorcuadros01" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bareatrap"
            android:textColor="@color/coloresetiquetas01"
            android:textSize="@dimen/tamanoetiquetas01"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tareatrapecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorcuadros01" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="26dp" >

        <Button
            android:id="@+id/bnuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bnuevo"
            android:textColor="@color/coloresetiquetas01" />

        <Button
            android:id="@+id/bcalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bcalcular"
            android:textColor="@color/coloresetiquetas01" />

        <Button
            android:id="@+id/bsalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bsalir"
            android:textColor="@color/coloresetiquetas01" />

    </LinearLayout>

</RelativeLayout>