<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo02"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Factorial" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfactorial"
            android:textColor="@color/coloresetiquetas01"
            android:textSize="@dimen/tamanoetiquetas01" />

        <EditText
            android:id="@+id/tnumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorcuadros01"
            android:textSize="@dimen/tamanocuadros01" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nresultado"
            android:textColor="@color/coloresetiquetas01"
            android:textSize="@dimen/tamanoetiquetas01" />

        <EditText
            android:id="@+id/tfactorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/colorcuadros01"
            android:textColorHint="@color/colorcuadros01"
            android:textSize="@dimen/tamanocuadros01" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <Button
            android:id="@+id/btnuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bnuevo"
            android:textColor="@color/coloresetiquetas01"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btcalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bcalcular"
            android:textColor="@color/coloresetiquetas01"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btsalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bsalir"
            android:textColor="@color/coloresetiquetas01"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>